# django-query-counter

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  README.rst  hook.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: codecov.yml  publish_pypi.yml  publish_test_pypi.yml  testing.yml
demo_project/: settings.py  urls.py
django_qc/: .pre-commit-hooks.yaml  __init__.py  core.py  settings.py
pre_commit_hooks/: remove_query_counts.py
tests/: base.py  demo.py  models.py  test_settings.py  test_wrapper.py
tests/migrations/: 0001_initial.py  0002_auto_20200903_2113.py
