[tool.poetry]
name = "django-qc"
version = "1.0.1"
description = "DB utility to help you catch query inefficiencies in Django."
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
readme = "README.md"
homepage = "https://github.com/sondrelg/django-query-counter"
license = "bsd-2-clause"
keywords = ["django", "database", "query", "n+1", "orm"]
classifiers=[
        'Development Status :: 4 - Beta',
        'Environment :: Web Environment',
        'Framework :: Django',
        'Framework :: Django :: 2.2',
        'Framework :: Django :: 3.0',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Documentation',
    ]

[tool.poetry.dependencies]
python = "^3.6.1"
django = "^2.2 || ^3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
wheel = "^0.34.2"
coverage = "^5.1"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
